Add frontend logic, Format go code, Add contributing doc

--- a/main/app/index.html
+++ b/main/app/index.html
@@ -133,8 +133,9 @@
   <script src="./vendor/bootswatch-dist/js/bootstrap.min.js"></script>
 
   <script src="./js/sidebar.js"></script>
+
   <script>
-  // kick off app
+  // kick off the app
   angular.module('weatherApp', ['angularChart'])
   </script>
 
