--- a/main/app/index.html
+++ b/main/app/index.html
@@ -11,9 +11,12 @@
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:Roboto:400,700">
   <link rel="stylesheet" href="./vendor/bootswatch-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./vendor/c3/c3.min.css">
+  <link rel="stylesheet" href="./vendor/weather-icons/css/weather-icons.min.css">
+  <link rel="stylesheet" href="./vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
   <link rel="stylesheet" href="./css/footer.css">
   <link rel="stylesheet" href="./css/sidebar.css">
   <link rel="stylesheet" href="./css/charts.css">
+  <link rel="stylesheet" href="./css/weather.css">
 </head>
 
 <body ng-app="weatherApp" ng-cloak>
@@ -47,9 +50,10 @@
   <script src="./vendor/angular-route/angular-route.min.js"></script>
   <script src="./vendor/d3/d3.min.js"></script>
   <script src="./vendor/c3/c3.js"></script>
-  <script src="./vendor/angular-chart/angular-chart.min.js"></script>
   <script src="./vendor/jquery/dist/jquery.min.js"></script>
+  <script src="./vendor/moment/min/moment.min.js"></script>
   <script src="./vendor/bootswatch-dist/js/bootstrap.min.js"></script>
+  <script src="./vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 
   <script src="./js/sidebar.js"></script>
 
@@ -59,7 +63,8 @@
 
   <script src="./js/service/dataService.js"></script>
 
-  <script src="./js/controller/overviewController.js"></script>
+  <script src="./js/controller/weekController.js"></script>
+  <script src="./js/controller/dayController.js"></script>
   <script src="./js/controller/realtimeController.js"></script>
   <script src="./js/controller/allController.js"></script>
 
