Add all data chart with subchart and datetime selectors.

--- a/main/app/index.html
+++ b/main/app/index.html
@@ -62,6 +62,7 @@
   <script src="./js/app.constants.js"></script>
 
   <script src="./js/service/dataService.js"></script>
+  <script src="./js/service/datetimeService.js"></script>
 
   <script src="./js/controller/sidebarController.js"></script>
   <script src="./js/controller/weekController.js"></script>
