Married week,day and all view.

--- a/main/app/index.html
+++ b/main/app/index.html
@@ -1,18 +1,37 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Weather App</title>
+  <title>Wetter App</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:Roboto:400,700">
+  <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="./icons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="./icons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./icons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="./icons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./icons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="./icons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./icons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="./icons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="./icons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png">
+  <link rel="manifest" href="./icons/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="./icons/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+
   <link rel="stylesheet" href="./vendor/bootswatch-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./vendor/c3/c3.min.css">
   <link rel="stylesheet" href="./vendor/weather-icons/css/weather-icons.min.css">
   <link rel="stylesheet" href="./vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
+
+  <link rel="stylesheet" href="./css/fonts.css">
   <link rel="stylesheet" href="./css/footer.css">
   <link rel="stylesheet" href="./css/sidebar.css">
   <link rel="stylesheet" href="./css/charts.css">
@@ -49,6 +68,7 @@
   <div ng-include="'templates/footer.html'"></div>
 
   <script src="./vendor/angular/angular.min.js"></script>
+  <script src="./vendor/angular-i18n/angular-locale_de-de.js"></script>
   <script src="./vendor/angular-route/angular-route.min.js"></script>
   <script src="./vendor/d3/d3.min.js"></script>
   <script src="./vendor/c3/c3.js"></script>
